<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            xmlns:tools="http://schemas.android.com/tools"
            android:background="@android:color/white"
            tools:context="com.pkesslas.serge.activity.AddContactActivity" >


    <RelativeLayout android:layout_width="match_parent"
                    android:layout_height="match_parent"
        >

        <android.support.v7.widget.Toolbar
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#00933B"/>

        <ImageView
            android:id="@+id/photo"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_below="@+id/toolbar"
            android:layout_margin="20dp"
            android:textSize="60sp"
            android:gravity="center"
            android:scaleType="centerCrop"
            android:background="@drawable/select_photo_background"
            />

        <EditText
            android:id="@+id/lastname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/photo"
            android:hint="@string/hint_lastname"
            android:textColor="@android:color/black"
            android:textCursorDrawable="@null"
            android:textColorHint="@android:color/darker_gray"
            android:layout_toRightOf="@+id/photo"
            android:layout_alignParentRight="true"
            android:layout_marginRight="20dp"/>

        <EditText
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/hint_name"
            android:textColor="@android:color/black"
            android:textCursorDrawable="@null"
            android:textColorHint="@android:color/darker_gray"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/lastname"
            android:layout_toRightOf="@+id/photo"
            android:layout_alignParentRight="true"
            android:layout_marginRight="20dp"/>

        <EditText
            android:id="@+id/phone_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/hint_number"
            android:textColor="@android:color/black"
            android:textCursorDrawable="@null"
            android:textColorHint="@android:color/darker_gray"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/photo"
            android:layout_alignParentRight="true"
            android:layout_alignParentLeft="true"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            />

        <EditText
            android:id="@+id/mail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/hint_email"
            android:textCursorDrawable="@null"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/darker_gray"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/phone_number"
            android:layout_alignParentRight="true"
            android:layout_alignParentLeft="true"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            />

        <EditText
            android:id="@+id/adresse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/hint_adress"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/darker_gray"
            android:layout_marginTop="20dp"
            android:textCursorDrawable="@null"
            android:layout_below="@+id/mail"
            android:layout_alignParentRight="true"
            android:layout_alignParentLeft="true"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            />

        <TextView
            android:id="@+id/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:gravity="center"
            android:background="@color/primary_dark"
            android:text="@string/save"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/darker_gray"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/adresse"
            android:layout_alignParentRight="true"
            android:layout_alignParentLeft="true"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            />
    </RelativeLayout>


</ScrollView>
